Patch purpur to preserve pufferfish.yml if it exists